ui: Fix icons aligning for Timeframe navigation buttons
Time frame navigation buttons had icons which
weren't aligned vertically before.
Now, content of navigation buttons is centered.

Release note (admin ui change): Fix icons aligning for
 Timeframe navigation buttons.

--- a/pkg/ui/src/views/cluster/components/controls/controls.styl
+++ b/pkg/ui/src/views/cluster/components/controls/controls.styl
@@ -47,6 +47,7 @@
       padding 0
       display flex
       justify-content center
+      align-items: center;
       &:first-child
         margin-left 0px
       &:hover
